# hs-dynamodb-tools

./: .gitignore  .gitmodules  .travis.yml  addSources.sh  hs-dynamodb-tools.cabal  stack.yaml
src/Aws/DynamoDb/Tools/: Capacity.hs  Connection.hs  Index.hs  Logger.hs  Table.hs  TimeSeries.hs  Types.hs
src/Aws/DynamoDb/Tools/TimeSeries/: Binned.hs  Sparse.hs  Types.hs
src/Data/Time/: Bins.hs
test/: Main.hs  TestHelpers.hs  config.yml.example
test/Aws/Test/DynamoDb/Tools/: Capacity.hs
test/Aws/Test/DynamoDb/Tools/TimeSeries/: Sparse.hs
test/Data/Test/Time/: Bins.hs
