name:                hs-dynamodb-tools
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
-- copyright:
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library

  exposed-modules:    Aws.DynamoDb.Tools.Index
                    , Aws.DynamoDb.Tools.Table
                    , Aws.DynamoDb.Tools.TimeSeries
                    , Aws.DynamoDb.Tools.Types
                    , Aws.DynamoDb.Tools.Connection
                    , Aws.DynamoDb.Tools.Logger
                    , Aws.DynamoDb.Tools.TimeSeries.Binned
                    , Aws.DynamoDb.Tools.TimeSeries.Sparse
                    , Aws.DynamoDb.Tools.TimeSeries.Types
                    , Data.Time.Bins
  -- other-modules:

  other-extensions:   DeriveDataTypeable
                    , FlexibleContexts
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NoMonomorphismRestriction
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TypeFamilies
                    , LambdaCase
                    , TemplateHaskell
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , BangPatterns
                    , ConstraintKinds

  build-depends:      base >=4.6 && <5
                    , aeson >=0.7 && <0.11
                    , aws
                    , aws-utils
                    , base64-bytestring >=1.0 && <1.1
                    , bifunctors >=4.2 && <5.2
                    , byteable >=0.1 && <0.2
                    , bytestring >=0.10 && <0.11
                    , cereal >=0.4 && <0.5
                    , conduit >=1.2 && <1.3
                    , containers >=0.5 && <0.6
                    , cryptohash >=0.11 && <0.12
                    , data-default >=0.5 && <0.6
                    , errors >=1.4 && <1.5
                    , exceptions >=0.8 && <0.9
                    , hashable >=1.2 && <1.3
                    , http-conduit
                    , katip
                    , lens >=4.8 && <4.13
                    , mmorph
                    , monad-control
                    , mtl >=2.2 && <2.3
                    , multi-compression
                    , old-locale
                    , random
                    , random >=1.1 && <1.2
                    , resourcet >=1.1 && <1.2
                    , retry >= 0.7
                    , safecopy >=0.8 && <0.9
                    , semigroups >=0.16 && <0.17
                    , string-conv >=0.1 && <0.2
                    , tagged >=0.7 && <0.9
                    , template-haskell >=2.8 && <2.11
                    , text >=1.1 && <1.3
                    , time >=1.4 && <1.6
                    , time-locale-compat >= 0.1.1.0 && < 0.2
                    , uuid
                    , yaml >=0.8 && <0.9

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
