name:                hs-dynamodb-tools
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
-- copyright:
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2,
                     GHC == 8.4.3,
                     GHC == 8.6.3


flag lib-Werror
  default: False
  manual: True


library

  exposed-modules:    Aws.DynamoDb.Tools.Index
                    , Aws.DynamoDb.Tools.Table
                    , Aws.DynamoDb.Tools.TimeSeries
                    , Aws.DynamoDb.Tools.Types
                    , Aws.DynamoDb.Tools.Capacity
                    , Aws.DynamoDb.Tools.Connection
                    , Aws.DynamoDb.Tools.Logger
                    , Aws.DynamoDb.Tools.TimeSeries.Binned
                    , Aws.DynamoDb.Tools.TimeSeries.Sparse
                    , Aws.DynamoDb.Tools.TimeSeries.Types
                    , Data.Time.Bins

  other-extensions:   DeriveDataTypeable
                    , FlexibleContexts
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NoMonomorphismRestriction
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TypeFamilies
                    , LambdaCase
                    , TemplateHaskell
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , BangPatterns
                    , ConstraintKinds

  build-depends:      base >=4.6 && <5
                    , aeson >=0.7
                    , aws >= 0.20
                    , aws-utils
                    , base64-bytestring >=1.0
                    , bifunctors >=4.2 && <5.6
                    , byteable >=0.1 && <0.2
                    , bytestring >=0.10
                    , cereal >=0.4 && <0.6
                    , conduit >=1.3
                    , containers >=0.5
                    , cryptohash >=0.11 && <0.12
                    , data-default >=0.5
                    , errors >=1.4
                    , exceptions >=0.8
                    , hashable >=1.2
                    , http-conduit
                    , katip >= 0.4.0.0
                    , lens >=4.8 && <5
                    , mmorph
                    , monad-control
                    , mtl >=2.2 && <2.3
                    , multi-compression
                    , old-locale
                    , random
                    , random >=1.1 && <1.2
                    , resourcet >=1.1.10
                    , retry >= 0.7.1
                    , safecopy >=0.8
                    , semigroups >=0.16
                    , string-conv >=0.1
                    , tagged >=0.7
                    , template-haskell >=2.8
                    , text >=1.1
                    , time >=1.4
                    , time-locale-compat >= 0.1.1.0
                    , uuid
                    , yaml >=0.8

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  if flag(lib-Werror)
    ghc-options: -Werror


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Aws.Test.DynamoDb.Tools.Capacity
    Aws.Test.DynamoDb.Tools.TimeSeries.Sparse
    Data.Test.Time.Bins
    TestHelpers
  build-depends:
      hs-dynamodb-tools
    , base
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , cereal
    , quickcheck-instances
    , stm
    , retry
    , time
    , aws
    , lens
    , text
    , http-conduit
    , katip
    , exceptions
    , mtl
    , monad-control
    , transformers-base
    , bytestring
    , resourcet
    , conduit
    , yaml
    , aeson
    , errors
    , unliftio-core
  default-language:    Haskell2010
  ghc-options:        -Wall -threaded
  if flag(lib-Werror)
    ghc-options: -Werror
